Fixed Dropdown button alignment

--- a/src/styles/dropdowns/MenuDropDown.css
+++ b/src/styles/dropdowns/MenuDropDown.css
@@ -3,11 +3,11 @@
 .ddexpand-button {
     position: absolute;
     top: 400px;
-    left: 197px;
+    left: 200px;
     background-color: #ffcc03;
     border: 3px solid black;
-    width: 40px;
-    height: 45px;
+    width: 38px;
+    height: 41px;
 }
 
 .inactive-menu {
